--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -76,16 +76,17 @@
     vertical-align: middle;
 }
 
+
 /* Wix Icon */
 .icon-wix::before {
-    content: "\f0c2"; /* Font Awesome cloud icon as a placeholder for Wix */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
     display: inline-block;
-    width: 24px; /* Standardized size */
-    height: 24px;
-    font-size: 24px;
-    color: inherit; /* Matches the default foreground color of other icons */
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 400"><path fill="currentColor" d="M393.4 131.7c0 13 2.1 32.7-28.7 43.8-9.5 3.5-16 9.7-16 9.7 0-31 4.7-42.2 17.4-48.9 9.8-5.1 27.2-4.6 27.2-4.6zm-115.8 35.5l-34.2 132.7-28.5-108.6c-7.7-32-20.8-48.5-48.4-48.5-27.4 0-40.7 16.2-48.4 48.5L89.5 299.9 55.3 167.2C49.7 140.5 23.9 129 0 132l65.6 247.9s21.6 1.6 32.5-4c14.2-7.3 21-12.8 29.6-46.6 7.7-30.1 29.1-118.4 31.1-124.7 4.8-14.9 11.1-13.8 15.4 0 2 6.3 23.5 94.6 31.1 124.7 8.6 33.7 15.4 39.3 29.6 46.6 10.8 5.5 32.5 4 32.5 4l65.6-247.9c-24.4-3.1-49.8 8.9-55.3 35.3zm115.8 5.2s-4.1 6.3-13.5 11.6c-6 3.4-11.8 5.6-18 8.6-15.1 7.3-13.2 14-13.2 35.2v152.1s16.6 2.1 27.4-3.4c13.9-7.1 17.1-14 17.3-44.8V181.4l0 0v-9zm163.4 84.1L640 132.8s-35.1-6-52.5 9.9c-13.3 12.1-24.4 29.6-54.2 72.5-.5 .7-6.3 10.5-13.1 0-29.3-42.2-40.8-60.3-54.2-72.5-17.4-15.8-52.5-9.9-52.5-9.9l83.2 123.7-83 123.4s36.6 4.6 54-11.2c11.5-10.5 17.6-20.4 52.5-70.7 6.8-10.5 12.6-.8 13.1 0 29.4 42.4 39.2 58.1 53.1 70.7 17.4 15.8 53.3 11.2 53.3 11.2L556.8 256.5z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    width: 100%; /* Takes the width of the <i> element */
+    height: 100%; /* Takes the height of the <i> element */
+    vertical-align: middle; /* Aligns with text */
 }
 
 /* WordPress Icon */
@@ -130,48 +131,49 @@
 
 /* BigCommerce Icon (House-like) */
 .icon-bigcommerce::before {
-    content: "\f015"; /* Font Awesome house icon */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
     display: inline-block;
-    width: 24px; /* Standardized size */
-    height: 24px;
-    font-size: 24px;
-    color: #000; /* Fallback color */
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60"><path fill="currentColor" d="M33.72 36.432h8.073c2.296 0 3.75-1.263 3.75-3.3 0-1.913-1.454-3.3-3.75-3.3H33.72c-.268 0-.497.23-.497.46v5.663c.038.268.23.46.497.46zm0 13.048h8.34c2.564 0 4.094-1.3 4.094-3.597 0-2-1.454-3.597-4.094-3.597h-8.34c-.268 0-.497.23-.497.46v6.237c.038.306.23.497.497.497zM63.257.16l-23.875 23.8h3.903c6.084 0 9.68 3.826 9.68 7.997 0 3.3-2.22 5.7-4.6 6.772-.383.153-.383.7.038.842 2.755 1.07 4.706 3.94 4.706 7.308 0 4.744-3.176 8.532-9.336 8.532H26.87c-.268 0-.497-.23-.497-.46V36.93L.164 63.023c-.344.344-.115.957.383.957h63.016c.23 0 .42-.2.42-.42V.505c.115-.42-.42-.65-.727-.344z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    width: 100%; /* Takes the width of the <i> element */
+    height: 100%; /* Takes the height of the <i> element */
+    vertical-align: middle; /* Aligns with text */
+    content: ""; /* Required for ::before to render */
 }
-
+  
 /* WooCommerce Icon (Shopping Bag) */
 .icon-woocommerce::before {
-    content: "\f07a"; /* Font Awesome shopping-cart icon */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
     display: inline-block;
-    width: 24px; /* Standardized size */
-    height: 24px;
-    font-size: 24px;
-    color: #000; /* Fallback color */
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024"><path fill="currentColor" d="M204.848 655.616v149.312c-1.488 21.392-10 38.432-25.648 54.064-15.6 15.648-45.456 24.16-69.616 24.16H74.032c-22.768 0-32.768-11.392-49.808-26.992C10 841.952 1.44 826.304.048 806.4h128V274.496c0-22.72 8.56-42.672 25.552-58.272 17.088-15.696 46.944-24.16 69.712-24.16h476.384c22.72 0 32.72 11.344 49.808 26.992 14.16 14.256 22.688 29.904 24.16 49.808H204.816v78.192c7.072-1.44 12.784-1.44 18.464-1.44h520.512c24.16 0 95.264 12.832 112.352 29.904 17.04 15.648 28.432 31.248 39.824 55.408L1023.92 725.36c0 22.72-9.904 42.624-27.04 58.272-17.04 15.648-26.992 22.768-49.76 22.768H223.312c-5.696 0-11.392 0-18.464-1.488v-75.376h742.304l-128-307.2-614.304.016v233.264zM614.4 76.816c0-35.552 28.48-63.984 64.032-63.984s63.984 28.432 63.984 63.984-28.432 63.984-63.984 63.984S614.4 112.368 614.4 76.816zm-511.952 0c0-35.552 28.432-63.984 63.984-63.984s63.984 28.432 63.984 63.984-28.432 63.984-63.984 63.984-63.984-28.432-63.984-63.984z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    width: 100%; /* Takes the width of the <i> element */
+    height: 100%; /* Takes the height of the <i> element */
+    vertical-align: middle; /* Aligns with text */
+    transform: rotate(180deg); /* Flip the icon upright */
+    transform-origin: center; /* Ensure it rotates around its center */
 }
-
 /* Shopify Icon (Stylized S/Arrow) */
 .icon-shopify::before {
-    content: "\f291"; /* Font Awesome shopping-bag icon */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
     display: inline-block;
-    width: 24px; /* Standardized size */
-    height: 24px;
-    font-size: 24px;
-    color: #000; /* Fallback color */
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M388.3 104.1a4.7 4.7 0 0 0 -4.4-4c-2 0-37.2-.8-37.2-.8s-21.6-20.8-29.6-28.8V503.2L442.8 472S388.7 106.5 388.3 104.1zM288.7 70.5a116.7 116.7 0 0 0 -7.2-17.6C271 32.9 255.4 22 237 22a15 15 0 0 0 -4 .4c-.4-.8-1.2-1.2-1.6-2C223.4 11.6 213 7.6 200.6 8c-24 .8-48 18-67.3 48.8-13.6 21.6-24 48.8-26.8 70.1-27.6 8.4-46.8 14.4-47.2 14.8-14 4.4-14.4 4.8-16 18-1.2 10-38 291.8-38 291.8L307.9 504V65.7a41.7 41.7 0 0 0 -4.4 .4S297.9 67.7 288.7 70.5zM233.4 87.7c-16 4.8-33.6 10.4-50.8 15.6 4.8-18.8 14.4-37.6 25.6-50 4.4-4.4 10.4-9.6 17.2-12.8C232.2 54.9 233.8 74.5 233.4 87.7zM200.6 24.4A27.5 27.5 0 0 1 215 28c-6.4 3.2-12.8 8.4-18.8 14.4-15.2 16.4-26.8 42-31.6 66.5-14.4 4.4-28.8 8.8-42 12.8C131.3 83.3 163.8 25.2 200.6 24.4zM154.2 244.6c1.6 25.6 69.3 31.2 73.3 91.7 2.8 47.6-25.2 80.1-65.7 82.5-48.8 3.2-75.7-25.6-75.7-25.6l10.4-44s26.8 20.4 48.4 18.8c14-.8 19.2-12.4 18.8-20.4-2-33.6-57.2-31.6-60.8-86.9-3.2-46.4 27.2-93.3 94.5-97.7 26-1.6 39.2 4.8 39.2 4.8L221.4 225.4s-17.2-8-37.6-6.4C154.2 221 153.8 239.8 154.2 244.6zM249.4 82.9c0-12-1.6-29.2-7.2-43.6 18.4 3.6 27.2 24 31.2 36.4Q262.6 78.7 249.4 82.9z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    width: 100%; /* Takes the width of the <i> element */
+    height: 100%; /* Takes the height of the <i> element */
+    vertical-align: middle; /* Aligns with text */
 }
-
 /* Magento Icon (Multi-shape) */
 .icon-magento::before {
-    content: "\f0c1"; /* Font Awesome link icon (as a placeholder for multi-shape) */
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
     display: inline-block;
-    width: 24px; /* Standardized size */
-    height: 24px;
-    font-size: 24px;
-    color: #000; /* Fallback color */
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M445.7 127.9V384l-63.4 36.5V164.7L223.8 73.1 65.2 164.7l.4 255.9L2.3 384V128.1L224.2 0l221.5 127.9zM255.6 420.5L224 438.9l-31.8-18.2v-256l-63.3 36.6 .1 255.9 94.9 54.9 95.1-54.9v-256l-63.4-36.6v255.9z"/></svg>');
+    background-size: contain;
+    background-repeat: no-repeat;
+    content: "";
+    width: 100%; /* Takes the width of the <i> element */
+    height: 100%; /* Takes the height of the <i> element */
+    vertical-align: middle; /* Aligns with text */
 }
